--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@capacitor/status-bar": "4.1.0",
     "@ionic/angular": "^6.1.9",
     "cordova-sqlite-storage": "^6.0.0",
+    "date-fns-tz": "^1.3.7",
     "ionicons": "^6.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
